--- a/DeliveryApi/appsettings.json
+++ b/DeliveryApi/appsettings.json
@@ -5,6 +5,7 @@
     "ProdutosCollectionName": "produtos",
     "CategoriasCollectionName": "categorias"
   },
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
